<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <android.support.v7.widget.CardView
      android:id="@+id/cv_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      app:cardCornerRadius="5dp"
      app:cardBackgroundColor="@color/colorPrimary"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
  >
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">
      <EditText
          android:id="@+id/et_user"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:singleLine="true"
          android:inputType="textEmailAddress"
          android:hint="@string/user"
          android:textColorHint="@color/colorAccent"
          android:textColor="@color/colorAccent"
          android:backgroundTint="@color/colorAccent"
          android:layout_margin="16dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
      />

      <EditText
          android:id="@+id/et_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:singleLine="true"
          android:inputType="textPassword"
          android:hint="@string/password"
          android:layout_margin="16dp"
          android:textColorHint="@color/colorAccent"
          android:textColor="@color/colorAccent"
          android:backgroundTint="@color/colorAccent"
          app:layout_constraintTop_toBottomOf="@id/et_user"
          app:layout_constraintStart_toStartOf="parent"
      />

      <Button
          android:id="@+id/bt_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/login"
          android:layout_margin="20dp"
          android:textColor="@color/colorAccent"
          android:background="@color/colorPrimaryDark"
          app:layout_constraintTop_toBottomOf="@id/et_password"
      app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

  </android.support.v7.widget.CardView>

  <android.support.design.widget.CoordinatorLayout
      android:id="@+id/cl_progressbar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/progressBarBackgroud"
      android:elevation="2dp"
      android:visibility="gone"
      tools:visibility="visible"
  >

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"/>

  </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>