...
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_amount"
        android:background="@android:color/white"
    >

      <TextView
          android:id="@+id/tv_customer_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/customer"
          android:textSize="16sp"
          android:textColor="@color/icons_color"
          android:layout_marginTop="25dp"
          android:layout_marginStart="16dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
...
