...
          app:layout_constraintBottom_toBottomOf="@id/tv_total_orders"
      />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_orders_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_orders_list"
        app:layout_constraintTop_toBottomOf="@id/cl_total_orders"
        app:layout_constraintBottom_toBottomOf="parent"
    />
...
